; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_dup.c_test_refs_dup__direct.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_dup.c_test_refs_dup__direct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [18 x i8] c"refs/heads/master\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_dup__direct() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = load i64, i64* @g_repo, align 8
  %4 = call i32 @git_reference_lookup(i32** %1, i64 %3, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @git_reference_dup(i32** %2, i32* %6)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32*, i32** %1, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = call i64 @git_reference_cmp(i32* %9, i32* %10)
  %12 = icmp eq i64 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @cl_assert(i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i64 @git_reference_owner(i32* %15)
  %17 = load i64, i64* @g_repo, align 8
  %18 = icmp eq i64 %16, %17
  %19 = zext i1 %18 to i32
  %20 = call i32 @cl_assert(i32 %19)
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @git_reference_free(i32* %21)
  %23 = load i32*, i32** %1, align 8
  %24 = call i32 @git_reference_free(i32* %23)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i64, i8*) #1

declare dso_local i32 @git_reference_dup(i32**, i32*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i64 @git_reference_cmp(i32*, i32*) #1

declare dso_local i64 @git_reference_owner(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
